[patch.crates-io]
pneutype = { git = "https://github.com/vdods/pneutype", rev = "pneutype-v0.5.1" }
selfhash = { git = "https://github.com/LedgerDomain/selfhash", branch = "vjson" }
selfsign = { path = "../selfsign" }
# selfsign = { git = "https://github.com/LedgerDomain/selfsign", branch = "jsonpath" }

[workspace]
resolver = "2"
members = [
    "did-key",
    "did-webplus/cli",
    "did-webplus/cli-lib",
    "did-webplus/core",
    "did-webplus/doc-storage-postgres",
    "did-webplus/doc-storage-sqlite",
    "did-webplus/doc-store",
    "did-webplus/jws",
    "did-webplus/mock",
    "did-webplus/resolver",
    "did-webplus/software-wallet",
    "did-webplus/vdg",
    "did-webplus/vdg-lib",
    "did-webplus/vdr",
    "did-webplus/vdr-lib",
    "did-webplus/wallet",
    "did-webplus/wallet-store",
    "did-webplus/wallet-storage-sqlite",
    "did-webplus/wasm",
    "test-util",
    "verifier-resolver",
    "vjson/core",
    "vjson/storage-sqlite",
    "vjson/store",
]
