[patch.crates-io]
ssi-claims = { git = "https://github.com/LedgerDomain/ssi", branch = "did-webplus-changes" }
ssi-crypto = { git = "https://github.com/LedgerDomain/ssi", branch = "did-webplus-changes" }
ssi-dids = { git = "https://github.com/LedgerDomain/ssi", branch = "did-webplus-changes" }
ssi-jwk = { git = "https://github.com/LedgerDomain/ssi", branch = "did-webplus-changes" }
ssi-jws = { git = "https://github.com/LedgerDomain/ssi", branch = "did-webplus-changes" }
ssi-jwt = { git = "https://github.com/LedgerDomain/ssi", branch = "did-webplus-changes" }
ssi-multicodec = { git = "https://github.com/LedgerDomain/ssi", branch = "did-webplus-changes" }
ssi-vc = { git = "https://github.com/LedgerDomain/ssi", branch = "did-webplus-changes" }
ssi-verification-methods = { git = "https://github.com/LedgerDomain/ssi", branch = "did-webplus-changes" }

[workspace]
resolver = "2"
members = [
    "did-key",
    "did-webplus/cli",
    "did-webplus/cli-lib",
    "did-webplus/core",
    "did-webplus/doc-storage-mock",
    "did-webplus/doc-storage-postgres",
    "did-webplus/doc-storage-sqlite",
    "did-webplus/doc-store",
    "did-webplus/jws",
    "did-webplus/mock",
    "did-webplus/resolver",
    "did-webplus/software-wallet",
    "did-webplus/software-wallet-indexeddb",
    "did-webplus/ssi",
    "did-webplus/urd",
    "did-webplus/urd-lib",
    "did-webplus/vdg",
    "did-webplus/vdg-lib",
    "did-webplus/vdr",
    "did-webplus/vdr-lib",
    "did-webplus/wallet",
    "did-webplus/wallet-store",
    "did-webplus/wallet-storage-mock",
    "did-webplus/wallet-storage-sqlite",
    "did-webplus/wasm",
    "storage-traits",
    "test-util",
    "verifier-resolver",
    "vjson/core",
    "vjson/storage-mock",
    "vjson/storage-sqlite",
    "vjson/store",
]

[workspace.dependencies]
async-trait = "0.1.89"
ed25519-dalek = "3.0.0-rc.0"
ed448-goldilocks = "0.14.0-pre.13"
k256 = "0.14.0-rc.11"
mbx = { git = "https://github.com/LedgerDomain/mbx", rev = "mbx-v0.3.0" }
p256 = "0.14.0-rc.11"
p384 = "0.14.0-rc.11"
p521 = "0.14.0-rc.11"
pneutype = { git = "https://github.com/vdods/pneutype", rev = "pneutype-v0.5.1" }
selfhash = { git = "https://github.com/LedgerDomain/selfhash", rev = "selfhash-v0.7.0" }
signature-dyn = { git = "https://github.com/LedgerDomain/signature-dyn", rev = "signature-dyn-v0.3.0" }
