[package]
name = "did-key"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2021"

[features]
"ed25519-dalek" = ["dep:ed25519-dalek", "selfsign/ed25519-dalek"]
"k256" = ["dep:k256", "selfsign/k256"]
"serde" = ["dep:serde"]

[dependencies]
anyhow = "1.0.83"
ed25519-dalek = { version = "2.0.0", optional = true }
k256 = { version = "0.13.1", optional = true }
log = "0.4.21"
multibase = "0.9.1"
pneutype = "0.5.1"
selfsign = "0.6.0"
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }

[dev-dependencies]
ctor = "0.2.8"
env_logger = "0.11.3"
