[package]
name = "did-key"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2021"

[features]
ed25519-dalek = ["dep:ed25519-dalek", "selfsign/ed25519-dalek"]
k256 = ["dep:k256", "selfsign/k256"]
serde = ["dep:serde"]
verifier-resolver = ["dep:async-trait", "dep:verifier-resolver"]

[dependencies]
anyhow = "1.0.94"
async-trait = { version = "0.1.80", optional = true }
ed25519-dalek = { version = "2.2.0", optional = true }
k256 = { version = "0.13.1", optional = true }
mbc = { path = "../../mbc" }
multibase = "0.9.1"
pneutype = "0.5.1"
selfsign = "0.6.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
ssi-multicodec = "0.2.0"
tracing = "0.1.37"
verifier-resolver = { path = "../verifier-resolver", optional = true }

[dev-dependencies]
ctor = "0.4.1"
test-util = { path = "../test-util" }
