[package]
name = "did-key"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2021"

[features]
ed25519-dalek = ["signature-dyn/ed25519-dalek"]
ed448-goldilocks = ["signature-dyn/ed448-goldilocks"]
k256 = ["signature-dyn/k256"]
p256 = ["signature-dyn/p256"]
p384 = ["signature-dyn/p384"]
p521 = ["signature-dyn/p521"]
serde = ["dep:serde"]
verifier-resolver = ["dep:async-trait", "dep:verifier-resolver"]

[dependencies]
anyhow = "1.0.94"
async-trait = { version = "0.1.80", optional = true }
mbx = { version = "0.1.0", features = ["signature-dyn"] }
multibase = "0.9.1"
pneutype = "0.5.1"
serde = { version = "1.0", optional = true, features = ["derive"] }
signature-dyn = "0.1.0"
ssi-multicodec = "0.2.0"
tracing = "0.1.37"
verifier-resolver = { path = "../verifier-resolver", optional = true }

[dev-dependencies]
ctor = "0.4.1"
test-util = { path = "../test-util" }
