[package]
name = "did-webplus-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
# Override the executable name to be user-friendly
name = "did-webplus"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.83", features = ["backtrace"] }
clap = { version = "4.5.4", features = ["derive"] }
did-webplus = { path = ".." }
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
lazy_static = "1.4.0"
reqwest = "0.11.22"
ssi-jwk = { version = "0.1.1", default-features = false, features = [
    "ed25519",
] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.5.0"
