[package]
name = "did-webplus-cli"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2021"

[[bin]]
# Override the executable name to be user-friendly
name = "did-webplus"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.83", features = ["backtrace"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
did-webplus = { path = ".." }
did-webplus-doc-store = { path = "../did-webplus-doc-store" }
did-webplus-doc-storage-sqlite = { path = "../did-webplus-doc-storage-sqlite" }
# It's a bit of a hack to depend on this, but this is where the JWS struct is at the moment.
did-webplus-mock = { path = "../did-webplus-mock" }
did-webplus-resolver = { path = "../did-webplus-resolver" }
did-webplus-software-wallet = { path = "../did-webplus-software-wallet" }
did-webplus-wallet = { path = "../did-webplus-wallet" }
did-webplus-wallet-storage = { path = "../did-webplus-wallet-storage", features = [
    "sqlx",
] }
did-webplus-wallet-storage-sqlite = { path = "../did-webplus-wallet-storage-sqlite" }
# TODO: Maybe make this a feature
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
expanduser = "1.2.2"
lazy_static = "1.4.0"
log = "0.4.21"
# NOTE: This is only used by ed25519-dalek
rand = "0.8"
reqwest = "0.12.5"
# Enable all the hash function features to support them all.
selfhash = { version = "0.4.0", features = ["blake3", "sha-256", "sha-512"] }
# Enable all the cryptographic key type features to support them all.
selfsign = { version = "0.6.0", features = ["ed25519-dalek", "k256"] }
serde_json = "1.0.107"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
ssi-jwk = { version = "0.1.1", default-features = false, features = [
    "ed25519",
] }
time = "0.3"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.5.0"
uuid = { version = "1.9.1", features = ["v4"] }
