[package]
name = "did-webplus-doc-storage-postgres"
version = "0.1.0"
authors = [
    "Ben Nichols <ben.nichols@ledgerdomain.com>",
    "Victor Dods <victor.dods@ledgerdomain.com>",
]
edition = "2021"

[dependencies]
async-trait = "0.1.80"
did-webplus = { path = ".." }
did-webplus-doc-store = { path = "../did-webplus-doc-store", features = [
    "sqlx",
] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
] }
