[package]
name = "did-webplus-doc-store"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.80"
did-webplus = { path = ".." }
selfhash = "0.1.4"
selfsign = "0.2.4"
serde_json = "1.0.107"
thiserror = "1.0.60"
time = { version = "0.3", features = ["serde"] }
