[package]
name = "did-webplus-doc-store"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2021"

[features]
sqlx = ["dep:sqlx"]

[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.80"
did-webplus = { path = ".." }
selfhash = "0.4.0"
selfsign = "0.6.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7", default-features = false, optional = true }
thiserror = "1.0.60"
time = { version = "0.3", features = ["serde"] }
