[package]
name = "did-webplus-mock"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2021"

[dependencies]
base64 = { version = "0.21.4" }
derive_more = { version = "0.99.17", default-features = false, features = [
    "deref",
    "display",
    "from",
    "into",
] }
did-webplus = { path = "..", features = ["ed25519-dalek"] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
rand = "0.8"
selfhash = "0.1.4"
selfsign = "0.2.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
serde_with = { version = "3.3.0", default-features = false, features = [
    "macros",
] }
thiserror = { version = "1.0.60", default-features = false }
time = { version = "0.3", features = ["serde", "serde-well-known", "macros"] }

[dev-dependencies]
serde_json = { version = "1", default-features = false }
serial_test = { version = "2", default-features = false }
# This is probably temporary.
ssi-jwk = { version = "0.1.1", default-features = false, features = [
    "ed25519",
] }
# This is probably temporary.
ssi-jws = { version = "0.1.0", default-features = false, features = [
    "ed25519",
] }
