[package]
name = "did-webplus-resolver"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2021"

[features]
postgres = ["did-webplus-doc-storage-postgres"]
sqlite = ["did-webplus-doc-storage-sqlite"]

[dependencies]
did-webplus = { path = ".." }
did-webplus-doc-store = { path = "../did-webplus-doc-store" }
did-webplus-doc-storage-postgres = { path = "../did-webplus-doc-storage-postgres", optional = true }
did-webplus-doc-storage-sqlite = { path = "../did-webplus-doc-storage-sqlite", optional = true }
lazy_static = "1.4.0"
reqwest = "0.12.5"
serde_json = "1.0.107"
thiserror = "1.0.60"
tracing = "0.1.37"
