[package]
name = "did-webplus-software-wallet"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
did-webplus = { path = ".." }
did-webplus-doc-store = { path = "../did-webplus-doc-store" }
did-webplus-resolver = { path = "../did-webplus-resolver" }
did-webplus-wallet = { path = "../did-webplus-wallet" }
did-webplus-wallet-storage = { path = "../did-webplus-wallet-storage" }
# TEMP: probably abstract behind selfsign or even ssi_jwk
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
enum-map = "2.7.3"
lazy_static = "1.4.0"
rand = "0.8"
reqwest = { version = "0.12.5", features = ["json"] }
selfhash = "0.2.2"
selfsign = { version = "0.4.0", features = ["ed25519-dalek"] }
serde_json = "1.0.107"
time = "0.3"
# TEMP HACK MAYBE
tracing = "0.1.37"
url = "2.5.0"

[dev-dependencies]
ctor = "0.2.8"
did-webplus-wallet-storage-sqlite = { path = "../did-webplus-wallet-storage-sqlite" }
dotenvy = "0.15.7"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.9.1", features = ["v4"] }
