[package]
name = "did-webplus-vdg"
version = "0.1.0"
authors = [
    "Ben Nichols <ben.nichols@ledgerdomain.com>",
    "Victor Dods <victor.dods@ledgerdomain.com>",
]
edition = "2021"

[dependencies]
aide = { version = "0.13", features = [
    "redoc",
    "axum-headers",
    "scalar",
    "axum",
    "axum-extra",
    "macros",
] }
anyhow = "1.0.83"
axum = "0.7.5"
axum-extra = "0.9"
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
axum-macros = "0.4.0"
did-webplus = { path = "..", features = ["ed25519-dalek"] }
dotenvy = "0.15.7"
http = "1"
http-body = "1"
hyper = "1"
lazy_static = "1.4.0"
reqwest = "0.12.5"
schemars = { version = "0.8", features = ["uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
] }
time = { version = "0.3", features = ["macros", "serde", "serde-well-known"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.8", features = ["serde", "v4"] }

[dev-dependencies]
ctor = "0.2.8"
did-webplus-mock = { path = "../did-webplus-mock" }
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
