[package]
name = "did-webplus-vdr"
version = "0.1.0"
authors = [
    "Ben Nichols <ben.nichols@ledgerdomain.com>",
    "Victor Dods <victor.dods@ledgerdomain.com>",
]
edition = "2021"

[dependencies]
anyhow = "1.0.83"
axum = "0.7.5"
config = "0.14.0"
did-webplus = { path = "..", features = ["ed25519-dalek"] }
http = "1"
http-body = "1"
hyper = "1"
lazy_static = "1.4.0"
reqwest = { version = "0.12.5", features = ["json"] }
selfhash = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde-inline-default = "0.2.0"
serde_json = "1.0.107"
serde_yaml = "0.9.33"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
] }
time = { version = "0.3", features = ["macros", "serde", "serde-well-known"] }
tokio = { version = "1.32", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
ctor = "0.2.8"
did-webplus-mock = { path = "../did-webplus-mock" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
