[package]
name = "test-util"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
lazy_static = "1.4.0"
reqwest = "0.12.5"
tokio = "1.41.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
