[package]
name = "did-webplus-cli-lib"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2021"

[features]
clap = ["dep:clap"]
ed25519-dalek = ["dep:ed25519-dalek", "selfsign/ed25519-dalek"]
k256 = ["dep:k256", "selfsign/k256"]
pkcs8 = ["selfsign/pkcs8"]

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.4", optional = true, features = ["derive", "env"] }
did-key = { path = "../../did-key", features = [
    "ed25519-dalek",
    "k256",
    "verifier-resolver",
] }
did-webplus-core = { path = "../core" }
did-webplus-doc-store = { path = "../doc-store" }
did-webplus-jws = { path = "../jws" }
did-webplus-resolver = { path = "../resolver" }
did-webplus-wallet = { path = "../wallet" }
did-webplus-wallet-store = { path = "../wallet-store" }
ed25519-dalek = { version = "2.0.0", optional = true, features = ["rand_core"] }
k256 = { version = "0.13.1", optional = true }
rand = "0.8"
selfhash = { version = "0.4.0", features = ["blake3", "self-hashable-json"] }
selfsign = "0.6.0"
serde_json = "1.0.107"
serde_json_canonicalizer = "0.3.0"
storage-traits = { path = "../../storage-traits" }
tracing = "0.1.37"
verifier-resolver = { path = "../../verifier-resolver" }
vjson-core = { path = "../../vjson/core" }
vjson-store = { path = "../../vjson/store" }
zeroize = "1.7.0"

[dev-dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
ctor = "0.2.8"
did-webplus-doc-storage-sqlite = { path = "../doc-storage-sqlite" }
did-webplus-doc-store = { path = "../doc-store", features = ["sqlx"] }
did-webplus-software-wallet = { path = "../software-wallet" }
did-webplus-vdr-lib = { path = "../vdr-lib", features = ["sqlite"] }
did-webplus-wallet-storage-sqlite = { path = "../wallet-storage-sqlite" }
dotenvy = "0.15.7"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls"] }
storage-traits = { path = "../../storage-traits" }
test-util = { path = "../../test-util" }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
vjson-storage-sqlite = { path = "../../vjson/storage-sqlite" }
vjson-store = { path = "../../vjson/store", features = ["sqlx"] }
