[package]
name = "did-webplus-cli"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2024"

[[bin]]
# Override the executable name to be user-friendly
name = "did-webplus"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
async-trait = "0.1.80"
clap = { version = "4.5.4", features = ["derive", "env"] }
did-key = { path = "../../did-key", features = ["verifier-resolver"] }
did-webplus-cli-lib = { path = "../cli-lib", features = [
    "ed25519-dalek",
    "ed448-goldilocks",
    "k256",
    "p256",
    "p384",
    "p521",
] }
did-webplus-core = { path = "../core", features = ["clap"] }
did-webplus-doc-store = { path = "../doc-store" }
did-webplus-doc-storage-sqlite = { path = "../doc-storage-sqlite" }
did-webplus-jws = { path = "../jws", features = ["clap"] }
did-webplus-resolver = { path = "../resolver" }
did-webplus-software-wallet = { path = "../software-wallet" }
did-webplus-wallet = { path = "../wallet" }
did-webplus-wallet-store = { path = "../wallet-store", features = ["sqlx"] }
did-webplus-wallet-storage-sqlite = { path = "../wallet-storage-sqlite" }
expanduser = "1.2.2"
mbx = "0.1.0"
# Enable all the hash function features to support them all.
selfhash = { version = "0.5.0", features = [
    "blake3",
    "self-hashable-json",
    "sha-256",
    "sha-512",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0.107"
serde_json_canonicalizer = "0.3.0"
signature-dyn = "0.1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
ssi-multicodec = "0.2.0"
storage-traits = { path = "../../storage-traits" }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.5.0"
uuid = { version = "1.9.1", features = ["v4"] }
verifier-resolver = { path = "../../verifier-resolver" }
vjson-core = { path = "../../vjson/core" }
vjson-storage-sqlite = { path = "../../vjson/storage-sqlite" }
vjson-store = { path = "../../vjson/store" }
